--- a/TMessagesProj/src/main/res/values/strings.xml
+++ b/TMessagesProj/src/main/res/values/strings.xml
@@ -7129,6 +7129,7 @@
     <string name="SavedTagLabelTagText">You can label your emoji tag with a text name.</string>
     <string name="SavedTagFilterByTag">Filter by Tag</string>
     <string name="SavedTagSearchHint">Search messages or tags</string>
+    <string name="TapToUserBotHint">Tap here to use this bot</string>
     <string name="SavedTagSearchTooltipHint">Tap this icon to search by tags</string>
     <string name="SavedTagLongpressHint">Tap and hold to add a name to your tag</string>
     <string name="SavedTagReactionsHint">You can add a tag to the message</string>
